dev-pods/dev-sarthak/dev-sarthak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-app
  namespace: dev-sarthak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-app
  template:
    metadata:
      labels:
        app: dev-app
    spec:
      containers:
        - name: app
          image: nginx
          ports:
            - containerPort: 80
